2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/strcmp.S: Load pointers into R*_LP.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/memcpy.S: Load __x86_64_data_cache_size_half
	into R11_LP and load __x86_64_shared_cache_size_half into
	R8_LP.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/memcmp-sse4.S: Load cache size into
	R8_LP.

2012-05-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power7/fpu/s_logb.c: New file. Optimized
	logb for POWER7.
	* sysdeps/powerpc/powerpc32/power7/fpu/s_logbf.c: New file. Optimized
	logbf for POWER7.
	* sysdeps/powerpc/powerpc32/power7/fpu/s_logbl.c: New file. Optimized
	logbl for POWER7.
	* sysdeps/powerpc/powerpc64/power7/fpu/s_logb.c: New file. Use
	powerpc32/power7/fpu/s_logb.c via #include.
	* sysdeps/powerpc/powerpc64/power7/fpu/s_logbf.c: New file. Use
	powerpc32/power7/fpu/s_logbf.c via #include.
	* sysdeps/powerpc/powerpc64/power7/fpu/s_logbl.c: New file. Use
	powerpc32/power7/fpu/s_logbl.c via #include.

2012-05-15  Joseph Myers  <joseph@codesourcery.com>

	* README.libm: Remove file.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/start.S: Simulate popping 4-byte argument
	count for x32.  Use R*_LP and omit operand-size suffix.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* shlib-versions: Move x86_64-.*-linux.* entries to ...
	* sysdeps/x86_64/64/shlib-versions: Here.  New file.
	* sysdeps/x86_64/x32/shlib-versions: New file.

2012-05-14  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/dl-osinfo.h (dl_fatal): Function removed.
	* elf/rtld.c (dl_main) [DL_SYSDEP_OSCHECK]:
	Use _dl_fatal_printf instead.

2012-05-14  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/configure.in (minimum_kernel): Always
	set if not set by the user.  Do not allow for being unset.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>
