@@ -1,5 +1,10 @@
 2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* sysdeps/x86_64/multiarch/memcpy-ssse3-back.S: Load cache
+	sizes into R*_LP.
+
+2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* sysdeps/x86_64/strcmp.S: Load pointers into R*_LP.
 
 2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>
